# talkbank-tools

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTERFACE_MAP.md  Makefile  README.md  SECURITY.md  batchalign_core.pyi  deny.toml  mutants.toml  openapi.json  pyproject.toml  pytest.ini
apps/dashboard-desktop/src-tauri/: Cargo.toml
crates/batchalign/: CLAUDE.md  Cargo.toml  build.rs
crates/batchalign-pyo3/: CLAUDE.md  Cargo.toml
crates/batchalign-pyo3/src/: cantonese_asr_bridge.rs  error.rs  lib.rs  py_json_bridge.rs  worker_artifacts.rs  worker_asr_exec.rs  worker_fa_exec.rs  worker_media_exec.rs  worker_protocol.rs  worker_text_results.rs
crates/batchalign-types/: Cargo.toml
crates/batchalign-types/src/: domain.rs  lib.rs  macros.rs  paths.rs  scheduling.rs  worker.rs
crates/batchalign/cache_migrations/: 20260101000000_initial.sql
crates/batchalign/migrations/: 20260101000000_initial.sql  20260306000000_attempts.sql  20260306010000_file_retry_state.sql  20260306020000_job_retry_state.sql  20260306030000_job_lease_state.sql  20260426163000_cancellation_provenance.sql
crates/batchalign/src/: benchmark.rs  capability.rs  command_family.rs  compare.rs  coref.rs  debug_artifacts.rs  direct.rs  ensure_wav.rs  error.rs  host_memory.rs  host_policy.rs  hostname.rs  infer_retry.rs  lib.rs  media.rs  openapi.rs  provenance.rs  queue.rs  runtime_paths.rs  runtime_supervisor.rs  server.rs  server_backend.rs  stanza_registry.rs  state.rs  submission.rs  temporal_backend.rs  temporal_reconciler.rs  text_batch.rs  trace_store.rs  translate.rs  utseg.rs  websocket.rs  worker_setup.rs  ws.rs
crates/batchalign/tests/: chat_ops_mor_count_parity_reference_corpus.rs  ci_checks.rs  cli.rs  command_family_smoke.rs  command_matrix.rs  command_surface_manifest.rs  commands.rs  compat_contracts.rs  daemon_e2e.rs  e2e.rs  gpu_concurrent_dispatch.rs  integration.rs  json_compat.rs  ml_golden.rs  pool_per_key_worker_throughput.rs  serve_start_workers_persisted.rs  shared_test_server_smoke.rs  shared_worker_fixture_smoke.rs  stress.rs  turmoil_net.rs  worker_failure_paths.rs  worker_integration.rs  worker_pool_thundering_herd.rs  worker_protocol_matrix.rs  worker_protocol_v2_compat.rs  worker_routing_and_lifecycle.rs  worker_v2_fa_roundtrip.rs  workflow_helpers.rs
crates/send2clan-sys/: Cargo.toml  README.md  build.rs
crates/send2clan-sys/csrc/: send2clan.c  send2clan.h  send2clan_version.h
crates/send2clan-sys/src/: error.rs  ffi.rs  lib.rs  tests.rs
crates/talkbank-clan/: .gitignore  COMMAND-PARITY-AUDIT.md  Cargo.toml  LICENSE  Makefile  README.md  TEXT-HACKING-AUDIT.md  deny.toml
crates/talkbank-clan/book/: book.toml
crates/talkbank-clan/docs/: CLAN-IMPROVEMENTS.md  clan-replacement-analysis.md  dependent-tier-semantics-audit.md  depfile-analysis.md
crates/talkbank-clan/scripts/: parity-check.sh
crates/talkbank-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/talkbank-derive/: Cargo.toml  README.md
crates/talkbank-direct-parser/: API_PREFIX_CONVENTIONS.md  Cargo.toml  README.md
crates/talkbank-lsp/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEBUGGING.md  README.md  test-alignment.cha  test.cha
crates/talkbank-model/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/talkbank-parser/: Cargo.toml  PARSING_PATTERNS.md  README.md
crates/talkbank-parser-tests/: CURRENT_STATUS.md  Cargo.toml  FINAL_SUMMARY.md  FIXES_COMPLETED.md  GOLDEN_WORDS_IMPLEMENTATION.md  GOLDEN_WORDS_STRATEGY.md  PARSER_TEST_AUDIT.md  error_words_corpus.txt  golden_bugs.toml  golden_com_tiers.txt  golden_gra_tiers.txt  golden_main_tiers.txt  golden_mor_tiers.txt  golden_pho_tiers.txt  golden_sin_tiers.txt  golden_wor_tiers.txt  golden_words.txt  golden_words_featured.txt  golden_words_minimal.txt
crates/talkbank-re2c-parser/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/talkbank-transform/: Cargo.toml  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_chat_file.rs  fuzz_parse_main_tier.rs  fuzz_parse_word.rs  fuzz_validate.rs
grammar/: .gitignore  .grammar-lint-config.json  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml
grammar/docs/: cleanup-audit-progress.md  pre-coarsening-grammar.js.reference  precedence-decisions.md  structuring-opaque-tokens.md  tokenization-rules.md
grammar/queries/: locals.scm
grammar/src/: generated_symbol_sets.js  grammar.json  node-types.json  parser.c
spec/: .gitignore  CLAUDE.md  Cargo.toml  README.md  VALIDATION_INFRASTRUCTURE.md
spec/constructs/: _CURATION_MANIFEST.md
spec/docs/: ALIGNMENT_DIVERGENCE_REPORT.md  ALIGNMENT_RULES.md  CHAT_TO_JSON_PIPELINE.md  CURATION_WORKFLOW.md  ERROR_CATALOG.md  ERROR_SPEC_AUDIT_RESOLUTION.md  ERROR_SPEC_FORMAT.md  GRAMMAR_PATTERNS.md  MARKDOWN_SPEC_IMPLEMENTATION.md  README.md  SESSION_SUMMARY.md  SPEC_VALIDATOR.md  WRITING_ERROR_SPECS.md
spec/errors/: Alignment_auto.md  Complex_auto.md  E001_auto.md  E002_auto.md  E003_auto.md  E101_auto.md  E202_auto.md  E202_missing_form_type.md  E203_auto.md  E207_auto.md  E208_auto.md  E209_auto.md  E210_auto.md  E211_auto.md  E212_auto.md  E213_auto.md  E214_auto.md  E220_auto.md  E230_auto.md  E231_auto.md  E232_auto.md  E233_auto.md  E241_auto.md  E241_illegal_untranscribed_marker.md  E242_auto.md  E243_auto.md  E244_auto.md  E245_auto.md  E246_auto.md  E247_auto.md  E248_auto.md  E249_auto.md  E250_auto.md  E251_auto.md  E252_auto.md  E253_auto.md  E258_auto.md  E259_auto.md  E301_auto.md  E302_auto.md  (+182 more)
spec/runtime-tools/: Cargo.toml
spec/symbols/: README.md  generate_rust_symbol_sets.js  symbol_registry.json  validate_symbol_registry.js
spec/tools/: CLAUDE.md  Cargo.toml
xtask/: Cargo.toml
xtask/src/: audit_docs.rs  audit_prose_references.rs  ci_hygiene.rs  dead_variant_audit.rs  docs_sync.rs  gen_runtime_toml.rs  main.rs  panic_audit.rs  rust_scan.rs  wide_struct_audit.rs
(+5021 files in other folders)
