[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/batchalign-types",
    "crates/batchalign",
    "crates/batchalign-transform",
    "apps/dashboard-desktop/src-tauri",
    "crates/batchalign-pyo3",
]
# talkbank-tools is now a virtual workspace: the batchalign3 codebase. The CHAT
# core (model, parser, transform, spec, grammar) lives in the chatter repo; the
# old root talkbank-tools CHAT-validation package (bins, TUI, roundtrip tests)
# was removed in the chatter dedup. Members consume chatter's crates via the
# path deps under [workspace.dependencies].

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/TalkBank/talkbank-tools"
homepage = "https://talkbank.org/"
keywords = ["talkbank", "chat-format", "linguistics", "nlp", "parsing"]
categories = ["parser-implementations", "text-processing"]
rust-version = "1.89.0"

# Workspace-level lint policy.
#
# Panic-as-control-flow is the dominant footgun in long-lived Rust code
# (LSP, server, async workers). The CLAUDE.md standard is "no panics in
# long-lived logic, recoverable conditions go through Result with thiserror
# domain types." These warn-level lints make every new panic site visible
# without one-shot breaking the existing tree (see docs/panic-audit/baseline.md
# for the frozen baseline; per-crate `[lints]` promote to `deny` as each
# crate finishes its audit).
#
# Test code keeps panic discipline relaxed — assertion macros panic by
# design, and `unwrap()` on a fixture that's known to parse is the standard
# Rust testing idiom. Per-test-module `#[allow]` is preferred over blanket
# exemptions; doctests remain unrestricted.
[workspace.lints.clippy]
unwrap_used   = "warn"
expect_used   = "warn"
panic         = "warn"
todo          = "warn"
unimplemented = "warn"

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
async-trait = "0.1"
assert_cmd = "2.2"
atty = "0.2"
axum = { version = "0.8", features = ["ws"] }
blake3 = "1.8"
cc = "1.2"
chrono = "0.4"

# CLI and tools
clap = { version = "4.6", features = ["derive", "env"] }
comrak = "0.52.0"

# Concurrency
crossbeam-channel = "0.5"
crossterm = "0.29"
ctrlc = "3.5"
dashmap = "6.2"
csv = "1"
futures = "0.3"
futures-util = "0.3"

# Utilities
dirs = "6.0"
divan = "0.1"
fs2 = "0.4"
include_dir = "0.7"
indexmap = { version = "2.14", features = ["serde"] }
indicatif = "0.18"

# Testing
insta = { version = "1.48", features = ["json", "yaml"] }
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
miette = { version = "7.6.0", features = ["derive"] }
notify = "8.2"
num_cpus = "1.17"
parking_lot = "0.12"
predicates = "3.1"

# Proc-macro dependencies
proc-macro2 = "1.0"
proptest = "1.11.0"
# pyo3 moves in lockstep with the numpy crate (pyo3-ffi's `links = "python"`
# forbids two pyo3 versions in one graph); see crates/batchalign-pyo3/Cargo.toml.
pyo3 = "0.29"
quick-xml = "0.40"
quote = "1.0"
rand = "0.10"
ratatui = { version = "0.30", features = ["serde"] }
rayon = "1.12"
regex = "1.12"
reqwest = { version = "0.13", features = ["multipart", "json", "blocking"] }
rstest = "0.26.1"
schemars = { version = "1.2", features = ["indexmap2", "smol_str03"] }
serde_yaml = "0.9"

# Core dependencies (shared across crates)
# Batchalign build crates track the `batchalign3` product release line in their
# own manifests rather than inheriting `workspace.package.version`, because the
# TalkBank core Rust line (`0.2.x`) and the Batchalign preview product line
# (`0.1.x`) are intentionally separate release trains.
batchalign = { path = "crates/batchalign" }
batchalign-types = { path = "crates/batchalign-types" }
libc = "0.2"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
shellexpand = "3.1"
similar = "3.1"
smallvec = { version = "1.15", features = ["serde", "union", "const_generics"] }
smol_str = { version = "0.3", features = ["serde"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate"] }
strsim = "0.11.1"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
batchalign-transform = { path = "crates/batchalign-transform" }

# CHAT core crates consumed from the published, public chatter repo via git deps
# pinned to a release tag. Self-contained: a plain checkout builds with no
# ../chatter sibling. To co-develop chatter+batchalign locally, add an UNCOMMITTED
# [patch."https://github.com/TalkBank/chatter"] block pointing these at
# ../chatter/crates/...; never commit a path override here. Adopt a newer chatter
# by bumping the tag. talkbank-transform is the GENERIC transform;
# batchalign-transform (above) holds the ML accretion.
talkbank-transform = { git = "https://github.com/TalkBank/chatter", tag = "v0.2.1" }
# Stage 1 dedup: talkbank-tools no longer carries its own copies of these.
talkbank-model = { git = "https://github.com/TalkBank/chatter", tag = "v0.2.1" }
talkbank-parser = { git = "https://github.com/TalkBank/chatter", tag = "v0.2.1" }
talkbank-parser-re2c = { git = "https://github.com/TalkBank/chatter", tag = "v0.2.1" }
talkbank-parser-tests = { git = "https://github.com/TalkBank/chatter", tag = "v0.2.1" }

phf = { version = "0.13", features = ["macros"] }
phf_codegen = "0.13"
tempfile = "3.27"
text-size = "1.1"
thiserror = "^2.0.18"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
toml = "^1.1.2"
tracing-appender = "0.2"
tracing-opentelemetry = "0.33"
tower-http = { version = "0.7", features = ["cors", "fs", "limit", "trace", "compression-gzip", "compression-br", "catch-panic", "timeout"] }
tower-lsp = "0.20"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
temporalio-client = "0.4"
temporalio-common = "0.4"
temporalio-macros = "0.4"
temporalio-sdk = "0.4"
temporalio-sdk-core = "0.4"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
whatlang = "0.18"
zhconv = "0.4.1"
rustc-hash = "2.1"
sysinfo = "0.39"
zip = { version = "8", default-features = false, features = ["deflate"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
ferrous-opencc = "0.4.0"

trybuild = "1.0"
unicode-width = "0.2"
walkdir = "^2.5"
# rusqlite was previously a workspace dep for xtask audit-docs; now
# replaced by sqlx (with a small tokio runtime in xtask) so the
# workspace links a single libsqlite3-sys version, and sqlx tracks
# the latest patched version automatically.

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"          # Less debug info -> faster linking

# NOTE: previously this was `[profile.dev.package."*"] opt-level = 1`,
# which optimized every third-party dependency in dev / `cargo check`
# builds. After the 2026-04-28 batchalign3 fold roughly tripled the
# third-party dep set (axum, async-trait, tokio's full feature surface,
# pyo3, sqlx via temporal-sdk, …), `opt-level = 1` for `*` made
# `cargo check` 5+ minutes cold. The setting is now scoped to
# `[profile.test.package."*"]` only, so test runtime stays fast while
# `cargo check` and non-test `cargo build` cycles get back the speed
# they had pre-fold.

[profile.dev.build-override]
opt-level = 3                       # Optimize proc macros and build scripts

[profile.release]
# Deliberately lean. BA3's wall-clock is dominated by Python ML inference
# (Stanza, Whisper) and external HTTP (Rev.AI), not by Rust code paths.
# `lto = true` (fat LTO) and `codegen-units = 1` were previously set to
# squeeze the last few percent out of Rust execution; the build-time cost
# of that whole-program optimization (5-15 min link, single-threaded
# codegen on the largest crates) was disproportionate to a runtime gain
# that is empirically lost in the noise of a single Stanza inference call.
# strip was also enabled for binary-size reasons that don't matter on the
# fleet machines.
#
# If profiling ever identifies a specific Rust hot path where LTO
# meaningfully moves the needle, re-add the settings then — with evidence.
# Until then, default release uses opt-level 3 (the cargo default for
# release) with codegen parallelism intact and symbols kept.

[profile.test]
split-debuginfo = "unpacked"
debug = "line-tables-only"

# Note: previously `[profile.test.package."*"] opt-level = 1` was in
# effect to speed up test *runtime*. Removed because it doubled test
# *build* time across hundreds of third-party deps in the post-fold
# workspace. For specific tests where runtime is the bottleneck, run
# with `cargo nextest run --release -p <crate>`. The default test
# profile now uses opt-level 0 for everything — fast to build, slower
# to execute, which is the right trade in iterative dev.
