[package]
name = "talkbank-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
[dependencies.talkbank-model]
path = "../crates/talkbank-model"

[dependencies.talkbank-parser]
path = "../crates/talkbank-parser"

# Fuzz target: parse_chat_file
[[bin]]
name = "fuzz_parse_chat_file"
path = "fuzz_targets/fuzz_parse_chat_file.rs"
test = false
doc = false
bench = false

# Fuzz target: parse_word
[[bin]]
name = "fuzz_parse_word"
path = "fuzz_targets/fuzz_parse_word.rs"
test = false
doc = false
bench = false

# Fuzz target: parse_main_tier
[[bin]]
name = "fuzz_parse_main_tier"
path = "fuzz_targets/fuzz_parse_main_tier.rs"
test = false
doc = false
bench = false

# Fuzz target: validate_chat_file
[[bin]]
name = "fuzz_validate"
path = "fuzz_targets/fuzz_validate.rs"
test = false
doc = false
bench = false
