[package]
name = "tree-sitter-talkbank"
description = "TalkBank CHAT transcription format"
version = "0.2.0"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "talkbank"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/TalkBank/tree-sitter-talkbank"
homepage = "https://talkbank.org"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
