[workspace]
members = ["tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/TalkBank/talkbank-tools"

[workspace.dependencies]

# Error handling
anyhow = "1.0"

# CLI and file handling
clap = { version = "4.5", features = ["derive"] }
comrak = "0.50"
chrono = "0.4"
chumsky = "0.12.0"

# Utilities
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tera = "1.20"
unicode-normalization = "0.1"

# Spec parsing
thiserror = "2.0"
toml = "1.0"
toml_edit = "0.25"

# Tree-sitter (for template generation - spec tools CAN use tree-sitter for parsing examples)
tree-sitter = "0.26"
tree-sitter-talkbank = { path = "../grammar" }
walkdir = "2.5"
oxc_allocator = "0.116.0"
oxc_ast = "0.116.0"
oxc_parser = "0.116.0"
oxc_span = "0.116.0"

# ARCHITECTURAL CONCERN: These create a build-time circular dependency
# spec/tools (bootstrap) needs rust parser → rust depends on spec-generated tests
# TODO: Resolve by making bootstrap optional or using only tree-sitter directly
talkbank-model = { path = "../crates/talkbank-model" }
talkbank-parser = { path = "../crates/talkbank-parser" }
