[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
# `audit-docs` writes a SQLite catalog. sqlx (the same crate the
# batchalign server uses) replaces the previous sync rusqlite binding
# so the workspace links a single libsqlite3-sys version. A small
# tokio runtime is started just for the audit-docs subcommand.
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true, features = ["rt", "macros"] }
regex = { workspace = true }

[lints]
workspace = true
