[package]
name = "batchalign-pyo3"
version = "0.1.0"
edition = "2024"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/TalkBank/talkbank-tools"
description = "Rust worker runtime for batchalign3"
publish = false

[lib]
name = "batchalign_core"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
# numpy and pyo3 move in lockstep: numpy 0.29 requires pyo3 ^0.29, and
# pyo3-ffi's `links = "python"` forbids two pyo3 versions in one dependency
# graph. Both bumped to 0.29 once numpy 0.29 (with pyo3-0.29 support) shipped.
numpy = "0.29"
pyo3 = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared batchalign crates
batchalign-types = { workspace = true }
talkbank-transform = { workspace = true }

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"          # Less debug info -> faster linking

[profile.dev.package."*"]
opt-level = 1                       # Optimize third-party deps (one-time cost)

[profile.test]
split-debuginfo = "unpacked"
debug = "line-tables-only"

# Panic-site audit completed 2026-04-29 (see
# `<workspace>/talkbank-tools/docs/panic-audit/pyo3.md`). The single
# non-test panic shape is annotated with a rationale comment;
# `deny`-level prevents new sites from landing without a deliberate
# `#[allow]` opt-in. pyo3/ is outside the root workspace by design
# (separate maturin packaging surface), so this table is independent
# of `[workspace.lints.clippy]` in the root Cargo.toml.
[lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
unreachable   = "deny"
todo          = "deny"
unimplemented = "deny"
