[package]
name = "batchalign-types"
version = "0.1.0"
description = "Shared batchalign domain and worker protocol types"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
