[package]
name = "batchalign"
version = "0.1.0"
description = "batchalign3: command-line interface, application, server, worker pool, cache"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["server", "binary-entry", "embed-dashboard"]

# Binary entrypoint: tracing-OTLP exporter and pre-main initialization
# for the `batchalign3` CLI binary. The library does not require this.
binary-entry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

# HTTP server, Temporal backend, SQLite job persistence, OpenAPI schema.
# Disable this feature for direct-mode-only builds that do not need axum,
# temporal, or the route/DB layer.
server = [
    "dep:anyhow",
    "dep:axum",
    "dep:tower-http",
    "dep:utoipa",
    "dep:temporalio-client",
    "dep:temporalio-common",
    "dep:temporalio-macros",
    "dep:temporalio-sdk",
    "dep:temporalio-sdk-core",
]

# Embed the React dashboard (frontend/dist/) into the binary at compile time.
# Requires `make build-dashboard` first. Without this feature, the dashboard is
# served from $BATCHALIGN_DASHBOARD_DIR or ~/.batchalign3/dashboard/ only.
embed-dashboard = ["dep:include_dir"]

# Dev-time async runtime debugger (tokio-console). Production binaries
# MUST NOT enable this feature — it requires `--cfg tokio_unstable` at
# build time (couples to non-stable Tokio APIs) and pulls in the
# tonic/prost gRPC server dep tree. Build with:
#   RUSTFLAGS="--cfg tokio_unstable" cargo build --features debug-runtime
# Then attach with `tokio-console http://127.0.0.1:6669`.
debug-runtime = ["dep:console-subscriber"]

[[bin]]
# The artifact name `batchalign3` is load-bearing: fleet deploys
# (`deploy/scripts/deploy_batchalign3.sh`) pick up
# `target/release/batchalign3`. Do NOT rename.
name = "batchalign3"
path = "src/bin/batchalign3.rs"
required-features = ["binary-entry"]

[dependencies]
# ── Always required (engine + direct mode) ────────────────────────────
batchalign-types = { workspace = true }
# chat_ops module deps (formerly batchalign-chat-ops, folded 2026-04-30)
aho-corasick = { workspace = true }
smallvec = { workspace = true }
strsim = { workspace = true }
whatlang = { workspace = true }
zhconv = { workspace = true }
rustc-hash = { workspace = true }
talkbank-model = { workspace = true }
talkbank-parser = { workspace = true }
batchalign-transform = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
moka = { workspace = true }
fs2 = { workspace = true }
tempfile = "3"

# ── CLI surface (formerly batchalign-cli) ────────────────────────────
clap = { workspace = true }
csv = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
zip = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

# ── Staged remote execution (rsync orchestrator polls via HTTP) ──────
reqwest = { workspace = true }

# ── Binary entry (optional, behind "binary-entry") ───────────────────
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# ── Dev-time async runtime debugger (optional, behind "debug-runtime") ─
console-subscriber = { version = "0.5", optional = true }

# ── Server-only (optional, behind "server" feature) ──────────────────
# anyhow is required by the temporalio v0.4 `#[workflow_methods]` macro
# expansion and by `ApplicationFailure::non_retryable(anyhow!(...))` at
# the temporal-activity error sites in `temporal_backend.rs`. Gated
# under `server` because it is only reachable when temporalio deps are.
anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
temporalio-client = { workspace = true, optional = true }
temporalio-common = { workspace = true, optional = true }
temporalio-macros = { workspace = true, optional = true }
temporalio-sdk = { workspace = true, optional = true }
temporalio-sdk-core = { workspace = true, optional = true }

# ── Embed dashboard (optional) ───────────────────────────────────────
include_dir = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
batchalign-types = { workspace = true }
axum = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
toml = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
# Enables `ChatCleanedText::test_unchecked` for test fixture
# construction. Production builds cannot reach the escape hatch.
talkbank-model = { workspace = true, features = ["test-utils"] }

# Deterministic simulation testing (network faults, virtual time)
turmoil = "0.7"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

# This crate finished its panic-site audit on 2026-04-29 (see
# `docs/panic-audit/batchalign-app.md`, `docs/panic-audit/batchalign-cli.md`,
# and `docs/panic-audit/batchalign-chat-ops.md`).
# All non-test panic shapes carry rationale-bearing `#[allow]` annotations;
# the workspace `warn` floor is promoted to `deny` here so new sites need a
# deliberate opt-in. See `talkbank-lsp/Cargo.toml` for the same pattern + the
# rationale on why workspace-inheritance is replaced with an inlined table.
[lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
unreachable   = "deny"
todo          = "deny"
unimplemented = "deny"
