[package]
name = "send2clan-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust FFI bindings for send2clan - enables sending file open messages to CLAN"
readme = "README.md"
build = "build.rs"

[build-dependencies]
cc = { workspace = true }

[dependencies]
# No runtime dependencies - pure FFI

[lib]
name = "send2clan"
path = "src/lib.rs"
