[package]
name = "talkbank-clan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLAN analysis command reimplementation for CHAT transcripts"
readme = "README.md"

[dependencies]
indexmap = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

# TalkBank crates
talkbank-model = { workspace = true }
talkbank-transform = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
